ちょっと修正

--- a/example.html
+++ b/example.html
@@ -55,7 +55,7 @@ th,td{
 	border: 1px solid #666;
 	background:rgba(255,255,255,0.8);
 	padding: 7px;
-	font-size:12px;
+	font-size:14px;
 }
 .ex{
 	overflow: hidden;
@@ -152,6 +152,7 @@ th,td{
 			</div>
 			<pre>$('.adjust2').imgSizeAdj({mode:'inner'});</pre>
 		</div>
+		<p>*img要素にはwidth属性とheight属性を入力してください</p>
 	</div>
 
 	<div id="options">
@@ -189,7 +190,7 @@ th,td{
 	
 	<div id="download">
 		<h2>Download</h2>
-		<p><a href="https://github.com/dtsuka/jquery-nfal.fixed2top">https://github.com/dtsuka/jquery-nfal.fixed2top</a></p>
+		<p><a href="https://github.com/dtsuka/jquery-nfal.imgsizeadj">https://github.com/dtsuka/jquery-nfal.imgsizeadj</a></p>
 	</div>
 </div>
 <div id="footer">
