コメント・typo修正
verticalCentring -> verticalCentering

--- a/example.html
+++ b/example.html
@@ -181,7 +181,7 @@ th,td{
 			<td>水平方向のセンタリングを行わない場合はfalse</td>
 		</tr>
 		<tr>
-			<td>verticalCentring</td>
+			<td>verticalCentering</td>
 			<td>true</td>
 			<td>垂直方向のセンタリングを行わない場合はfalse</td>
 		</tr>
