--- a/example.html
+++ b/example.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>NFAL Image Size Adjuster - jQuery Plugin</title>
+<meta name="description" content="画像を親要素に合わせて縮小し、中心に配置するjQueryプラグインです。">
 <style type="text/css">
 body{
 	margin: 0;
@@ -116,7 +117,7 @@ th,td{
 <body>
 <div id="main">
 	<h1>NFAL Image Size Adjuster - jQuery Plugin</h1>
-	<p>画像を親要素に合わせて縮小し、中心に配置するプラグインです</p>
+	<p>画像を親要素に合わせて縮小し、中心に配置するプラグインです。</p>
 	<ul id="nav">
 		<li><a href="#example">Example</a></li>
 		<li><a href="#options">Options</a></li>
@@ -202,7 +203,6 @@ th,td{
 
 
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.1.min.js"></script>
-<script type="text/javascript" src="other.js"></script>
 <script type="text/javascript" src="jquery.nfal.imgsizeadj.js"></script>
 <script language="JavaScript" type="text/javascript">
 jQuery(function($){
